feat: refactor Command Line Runner bean